# spfmerge

./: .gitattributes  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
docs/: cli.rst  conf.py  index.rst  module.rst
docs/source/: conf.py  index.rst
spfmerge/: __init__.py  spfmerge.py
tests/: test_cli.py
