[build-system]
requires = ["poetry-core>=1.0.0,<1.4.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "spfmerge"
version = "v1.0.0"
description = "Merge two SPF TXT records together"
authors = ["Sébastien Riccio <sriccio@swisscenter.com>"]
maintainers = ["Sébastien Riccio <sriccio@swisscenter.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
fqdn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
spfmerge = "spfmerge.spfmerge:cli"

[tool.poetry-dynamic-versioning]
enable = true