[build-system]
requires = ["poetry-core>=1.4.0,<1.5.2", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "spfmerge"
version = "v1.0.0"
description = "Merge two SPF TXT records together"
authors = ["Sébastien Riccio <sriccio@swisscenter.com>"]
maintainers = ["Sébastien Riccio <sriccio@swisscenter.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
fqdn = "^1.5.1"
Sphinx = { version = ">=1.6,<7", optional = true }
sphinx-rtd-theme = { version = "1.2.1", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<7.3.1"
pylint = ">=2.17"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[tool.poetry.scripts]
spfmerge = "spfmerge.spfmerge:cli"

[tool.poetry-dynamic-versioning]
enable = true